--- a/styles.css
+++ b/styles.css
@@ -718,7 +718,8 @@ quita la transparencia del menu*/
 }
 
 /*Crea el display para hacer los recuadros de información en métodos de pago*/
-#metodosPago p+p+ul {
+#metodosPago p+p+ul , #industrias p+p+ul 
+{
   display: flex;
   justify-content: space-between;
   list-style: none;
