--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 /* ESTILOS GENERALES    */
 /*****************************************/
 
+/**Configuraciones menú según resolución de pantalla*/
 @media (min-width: 1280px) and (max-width: 1919px)
 {
   .navbar{ 
@@ -195,7 +196,9 @@ no se le pone al body pq descuadra el header */
         display: block;
       }
 
-      
+      #overview{
+        margin-top: -150px;
+      }
 
       /* Hace que las imagenes de Colombia que van en dos columnas salgan dimensionadas correctamente */
       .col-md-1.col-xs-3 
@@ -816,6 +819,7 @@ quita la transparencia del menu*/
     justify-content: space-between;
     list-style: none;
     flex-direction: column;
+    padding-inline-start: 0%;
   }
   #metodosPago p+p+ul li, #industrias p+p+ul li {
     width: auto;
@@ -935,9 +939,6 @@ quita la transparencia del menu*/
 
 @media (max-width: 768px)
 {
-  #industrias #overview{
-    margin-top: -120px;
-  }
 
   #industrias #hallazgos-clave ul {
     display: flex;
