--- a/styles.css
+++ b/styles.css
@@ -587,7 +587,6 @@ nav-pills>li.active
   color: white;
   margin-top: -100px;
   /* min-height: 130hv ; */
-  background-position: center 20%;
   
 }
 
@@ -601,17 +600,65 @@ nav-pills>li.active
 /*Arregla el slogan*/
 #inicio div + p{
   color: white;
-  padding: 0px 350px 0 280px;
   text-align: center;
   font-size: 15px;
-  position: absolute;
-  top: 220px;
+  position:absolute;
 }
 
-@media (min-width: 1260px)
+@media (min-width: 1920px)
 {
+  #inicio{
+    width: 1920px;
+  }
+}
+
+@media (min-width: 1800px)
+{
+
+  #inicio div + p{
+    top: 220px;
+    width: 100%;
+    padding: 0px 28% 0px 22%;
+  }
+
   #inicio #header{
-    background-position: center 30%;
+    background-position: center -350px;
+  }
+}
+
+@media (max-width: 1800px)
+{
+
+  #inicio div + p{
+    top: 220px;
+    width: 100%;
+    padding: 0px 28% 0px 22%;
+  }
+  #inicio #header{
+    background-position: center -350px;
+  }
+}
+
+@media (max-width: 1500px)
+{
+
+  #inicio div + p{
+    top: 220px;
+    padding: 0px 25% 0px 20%;
+  }
+
+}
+
+@media (max-width: 1400px)
+{
+
+  #inicio div + p{
+    top: 220px;
+    padding: 0px 25% 0px 20%;
+  }
+
+  #inicio #header{
+    background-position: center -70px;
   }
 }
 
@@ -619,8 +666,11 @@ nav-pills>li.active
 {
   #inicio div + p{
     padding: 0px 350px 0 250px;
-    position: absolute;
     top: 210px;
+  }
+
+  #inicio #header{
+    background-position: center -40px;
   }
 }
 
@@ -631,7 +681,7 @@ nav-pills>li.active
   }
 
   #inicio #header{
-    background-position: center 10%;
+    background-position: center -15px;
   }
 }
 
@@ -642,7 +692,7 @@ nav-pills>li.active
   }
 
   #inicio #header{
-    background-position: center -20%;
+    background-position: center 20px;
   }
 }
 
@@ -653,10 +703,50 @@ nav-pills>li.active
   }
 
   #inicio #header{
-    background-position: center 90px;
+    background-position: center 80px;
   }
 }
-  
+
+@media(max-width: 768px)
+{
+  #inicio div + p{
+    padding: 0px 50px;
+    position: absolute;
+    top: 120px
+  }
+
+  #inicio #header{
+    background-position: center -100px;
+  }
+}
+ 
+@media(max-width: 700px)
+{
+  #inicio div + p{
+    padding: 0px 50px;
+    position: absolute;
+    top: 120px
+  }
+
+  #inicio #header{
+    background-position: center -60px;
+  }
+}
+
+ 
+@media(max-width: 580px)
+{
+  #inicio div + p{
+    padding: 0px 50px;
+    position: absolute;
+    top: 120px
+  }
+
+  #inicio #header{
+    background-position: center -20px;
+  }
+}
+
 #inicio h1
 {
   text-align: center;
